# coramai_take_home

./: .gitignore  README.md
cpp/: Dockerfile  README.md  docker-compose.yml  install_zeromq.sh
cpp/src/: CMakeLists.txt  compile_binaries.sh  image_processor_main.cc  producer_main.cc  stats_reporting_main.cc
python/: Dockerfile  README.md  docker-compose.yml  requirements.txt  run_service.sh
python/src/: image_processing_service_main.py  producer_service_main.py  stats_reporting_service_main.py  utils.py
